--- a/styles.css
+++ b/styles.css
@@ -173,6 +173,9 @@ footer p{
         
         
     }
+     .meio2 button{
+        margin-top: 20px;
+     }
     .logo .fotoum{
        display: none;
 
